# clera

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  pyproject.toml  requirements-voice.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  backfill.py  config.py  digest.py  doctor.py  main.py  platform.py
app/agent/: prompts.py  secretary.py  transcribe.py  vision.py
app/agent/providers/: anthropic_provider.py  base.py  claude_cli_provider.py
app/billing/: meter.py  pricing.py
app/handlers/: business.py  control.py  managed.py
app/policy/: policy.py
app/store/: memory_store.py  models.py  repo.py  sqlite_store.py
deploy/: clera.service  com.clera.secretary.plist
docs/: DEPLOY.md  DESIGN.md  LIVE_TEST.md  PLATFORM.md
tests/: test_anthropic_provider.py  test_digest.py  test_managed_bots.py  test_meter.py  test_policy.py  test_prompts.py  test_secretary_actions.py  test_sqlite_store.py
