[project]
name = "my-telegram-secretary"
version = "0.1.0"
description = "Turnkey personal secretary bots for Telegram (open-core MVP)"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
# A pragmatic, non-noisy set: pyflakes, pycodestyle, isort, bugbear,
# comprehensions, pyupgrade, and simplify.
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
ignore = [
    "E501",  # line length handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
