[project]
name = "clera"
version = "0.1.0"
description = "Clera — a personal secretary bot that reads your chats and drafts replies in your voice (open-core MVP)"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
# A pragmatic, non-noisy set: pyflakes, pycodestyle, isort, bugbear,
# comprehensions, pyupgrade, and simplify.
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
ignore = [
    "E501",  # line length handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
